--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "md5": "^2.3.0",
     "react": "^18.3.1",
+    "react-activity": "^2.1.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/md5": "^2.3.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/styled-components": "^5.1.34",
