--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -18,6 +18,10 @@ jobs:
           node-version: 23.x
           cache: 'npm'
 
+      - name: Install Node.js dependencies
+        run: npm ci
+        working-directory: src/
+        
       - name: Lint Action
         uses: wearerequired/lint-action@v2.3.0
         with:
