--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-activity": "^2.1.3",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/lodash": "^4.17.14",
     "@types/md5": "^2.3.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
