--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "@types/lodash": "^4.17.14",
     "@types/md5": "^2.3.5",
     "@types/react": "^18.3.18",
